[add] Settings -> General -> Rate video after watching
[add] Settings -> API -> Enable API configuration page
        - when enabled, visit http://ipaddress:port/api to configure API keys from a web browser
        - port is configured in Settings - HTTP Server - Port
[add] Storing personal api keys in api_keys.json, restore keys from json on settings loss
[fix] context menu after playback
[fix] alternative player, do not append headers
[fix/upd] post play events happen post play
[fix/upd] set title from metadata on play
[upd] Dutch strings [MB1968]
[upd] French strings [bubuleur]

5.5.0
[add] Saved Playlists
[add] allow developers to use their own api key
    - xbmcgui.Window(10000).setProperty('plugin.video.youtube-configs', json.dumps({"origin": ADDON_ID, "main": {"system": SYSTEM_NAME, "key": API_KEY[, "id": CLIENT_ID, "secret": CLIENT_SECRET]}}))
[add] Audio only: Settings -> General
[add] Age gate enforcement: Settings -> General
[add] Quick search and Quick search (Incognito)
    - Settings -> Folders
    - incognito doesn't add to search history or run post play events (add to watch history)
[add] Quick search to channels (no history)
[add] Live folder to channels
[fix] My Channel videos incl. private
[fix] mpeg-dash vods, proxy required
    - Settings - MPEG-DASH
    - Thanks to Schtek for generating the needed mpd file
[fix/upd] use select dialog for subtitle settings
    - [add] Configure subtitles: Settings -> General
    - [add] Current language with No auto-generated subtitles option
[upd] language/translation paths * Isengard (15.x)+ required
[upd] youtube_resolver: allow resolve by url
[fix/upd] do not use distutils.version.LooseVersion for version compare [stefansaraev]
[fix/upd] add check to api key stripping
[fix/upd] subtitles default to non asr track when possible
[fix/upd] login client logging and endpoints
[fix/upd] Watch Later
    - Clear: Settings - Folders - Custom Watch Later playlist id